--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,13 @@ android {
     }
 }
 
+dependencies {
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+}
+
 kotlin {
     targets {
-        fromPreset(presets.android, 'androidLib')
+        fromPreset(presets.android, 'hmi-core')
     }
 
     sourceSets {
