driver: import Platform and Vehicle

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.multiplatform'
-}
+apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.multiplatform'
 
 group = 'ch.hsr.ilt'
 version = 1.1
@@ -15,25 +13,30 @@ android {
     }
 }
 
-dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-}
-
 kotlin {
     targets {
-        fromPreset(presets.android, 'hmi-core')
+        fromPreset(presets.android, 'android')
     }
 
     sourceSets {
         commonMain {
             dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-stdlib-common'
+                implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$kotlinCoroutinesVersion"
             }
         }
+
         commonTest {
             dependencies {
                 implementation 'org.jetbrains.kotlin:kotlin-test-common'
                 implementation 'org.jetbrains.kotlin:kotlin-test-annotations-common'
+            }
+        }
+
+        androidMain {
+            dependencies {
+                implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutinesVersion"
             }
         }
     }
