--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ android {
         minSdkVersion 26
         targetSdkVersion 29
     }
+
+    sourceSets {
+        main.java.srcDirs += 'src/androidMain/kotlin'
+        test.java.srcDirs += 'src/androidTest/kotlin'
+    }
 }
 
 kotlin {
